Parser/ltlsnfParser.cpp

// Generated from ltlsnf.g4 by ANTLR 4.13.0


#include "ltlsnfListener.h"

#include "ltlsnfParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LtlsnfParserStaticData final {
  LtlsnfParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LtlsnfParserStaticData(const LtlsnfParserStaticData&) = delete;
  LtlsnfParserStaticData(LtlsnfParserStaticData&&) = delete;
  LtlsnfParserStaticData& operator=(const LtlsnfParserStaticData&) = delete;
  LtlsnfParserStaticData& operator=(LtlsnfParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ltlsnfParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LtlsnfParserStaticData *ltlsnfParserStaticData = nullptr;

void ltlsnfParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ltlsnfParserStaticData != nullptr) {
    return;
  }
#else
  assert(ltlsnfParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LtlsnfParserStaticData>(
    std::vector<std::string>{
      "formula", "listOfSnfClauses", "snfClauseList", "snfClause", "alwaysClause", 
      "temporalClause", "propositionalClause", "stepClause", "sometimeClause", 
      "literalList", "nextLiteralList", "literal"
    },
    std::vector<std::string>{
      "", "'.'", "'('", "')'", "'['", "']'", "','", "'not'", "'and'", "'or'", 
      "'always'", "'next'", "'sometime'"
    },
    std::vector<std::string>{
      "", "", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "NOT", "AND", 
      "OR", "ALWAYS", "NEXT", "SOMETIME", "WS", "IDENTIFIER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ltlsnfParserStaticData = staticData.release();
}

}

ltlsnfParser::ltlsnfParser(TokenStream *input) : ltlsnfParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ltlsnfParser::ltlsnfParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ltlsnfParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ltlsnfParserStaticData->atn, ltlsnfParserStaticData->decisionToDFA, ltlsnfParserStaticData->sharedContextCache, options);
}

ltlsnfParser::~ltlsnfParser() {
  delete _interpreter;
}

const atn::ATN& ltlsnfParser::getATN() const {
  return *ltlsnfParserStaticData->atn;
}

std::string ltlsnfParser::getGrammarFileName() const {
  return "ltlsnf.g4";
}

const std::vector<std::string>& ltlsnfParser::getRuleNames() const {
  return ltlsnfParserStaticData->ruleNames;
}

const dfa::Vocabulary& ltlsnfParser::getVocabulary() const {
  return ltlsnfParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ltlsnfParser::getSerializedATN() const {
  return ltlsnfParserStaticData->serializedATN;
}


//----------------- FormulaContext ------------------------------------------------------------------

ltlsnfParser::FormulaContext::FormulaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::FormulaContext::AND() {
  return getToken(ltlsnfParser::AND, 0);
}

tree::TerminalNode* ltlsnfParser::FormulaContext::LPAREN() {
  return getToken(ltlsnfParser::LPAREN, 0);
}

ltlsnfParser::ListOfSnfClausesContext* ltlsnfParser::FormulaContext::listOfSnfClauses() {
  return getRuleContext<ltlsnfParser::ListOfSnfClausesContext>(0);
}

tree::TerminalNode* ltlsnfParser::FormulaContext::RPAREN() {
  return getToken(ltlsnfParser::RPAREN, 0);
}


size_t ltlsnfParser::FormulaContext::getRuleIndex() const {
  return ltlsnfParser::RuleFormula;
}

void ltlsnfParser::FormulaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFormula(this);
}

void ltlsnfParser::FormulaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFormula(this);
}

ltlsnfParser::FormulaContext* ltlsnfParser::formula() {
  FormulaContext *_localctx = _tracker.createInstance<FormulaContext>(_ctx, getState());
  enterRule(_localctx, 0, ltlsnfParser::RuleFormula);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    match(ltlsnfParser::AND);
    setState(25);
    match(ltlsnfParser::LPAREN);
    setState(26);
    listOfSnfClauses();
    setState(27);
    match(ltlsnfParser::RPAREN);
    setState(28);
    match(ltlsnfParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListOfSnfClausesContext ------------------------------------------------------------------

ltlsnfParser::ListOfSnfClausesContext::ListOfSnfClausesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::ListOfSnfClausesContext::LBRACK() {
  return getToken(ltlsnfParser::LBRACK, 0);
}

tree::TerminalNode* ltlsnfParser::ListOfSnfClausesContext::RBRACK() {
  return getToken(ltlsnfParser::RBRACK, 0);
}

ltlsnfParser::SnfClauseListContext* ltlsnfParser::ListOfSnfClausesContext::snfClauseList() {
  return getRuleContext<ltlsnfParser::SnfClauseListContext>(0);
}


size_t ltlsnfParser::ListOfSnfClausesContext::getRuleIndex() const {
  return ltlsnfParser::RuleListOfSnfClauses;
}

void ltlsnfParser::ListOfSnfClausesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterListOfSnfClauses(this);
}

void ltlsnfParser::ListOfSnfClausesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitListOfSnfClauses(this);
}

ltlsnfParser::ListOfSnfClausesContext* ltlsnfParser::listOfSnfClauses() {
  ListOfSnfClausesContext *_localctx = _tracker.createInstance<ListOfSnfClausesContext>(_ctx, getState());
  enterRule(_localctx, 2, ltlsnfParser::RuleListOfSnfClauses);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(ltlsnfParser::LBRACK);
    setState(32);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ltlsnfParser::OR

    || _la == ltlsnfParser::ALWAYS) {
      setState(31);
      snfClauseList();
    }
    setState(34);
    match(ltlsnfParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SnfClauseListContext ------------------------------------------------------------------

ltlsnfParser::SnfClauseListContext::SnfClauseListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ltlsnfParser::SnfClauseContext *> ltlsnfParser::SnfClauseListContext::snfClause() {
  return getRuleContexts<ltlsnfParser::SnfClauseContext>();
}

ltlsnfParser::SnfClauseContext* ltlsnfParser::SnfClauseListContext::snfClause(size_t i) {
  return getRuleContext<ltlsnfParser::SnfClauseContext>(i);
}

std::vector<tree::TerminalNode *> ltlsnfParser::SnfClauseListContext::COMMA() {
  return getTokens(ltlsnfParser::COMMA);
}

tree::TerminalNode* ltlsnfParser::SnfClauseListContext::COMMA(size_t i) {
  return getToken(ltlsnfParser::COMMA, i);
}


size_t ltlsnfParser::SnfClauseListContext::getRuleIndex() const {
  return ltlsnfParser::RuleSnfClauseList;
}

void ltlsnfParser::SnfClauseListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSnfClauseList(this);
}

void ltlsnfParser::SnfClauseListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSnfClauseList(this);
}

ltlsnfParser::SnfClauseListContext* ltlsnfParser::snfClauseList() {
  SnfClauseListContext *_localctx = _tracker.createInstance<SnfClauseListContext>(_ctx, getState());
  enterRule(_localctx, 4, ltlsnfParser::RuleSnfClauseList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    snfClause();
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ltlsnfParser::COMMA) {
      setState(37);
      match(ltlsnfParser::COMMA);
      setState(38);
      snfClause();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SnfClauseContext ------------------------------------------------------------------

ltlsnfParser::SnfClauseContext::SnfClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ltlsnfParser::AlwaysClauseContext* ltlsnfParser::SnfClauseContext::alwaysClause() {
  return getRuleContext<ltlsnfParser::AlwaysClauseContext>(0);
}

ltlsnfParser::PropositionalClauseContext* ltlsnfParser::SnfClauseContext::propositionalClause() {
  return getRuleContext<ltlsnfParser::PropositionalClauseContext>(0);
}


size_t ltlsnfParser::SnfClauseContext::getRuleIndex() const {
  return ltlsnfParser::RuleSnfClause;
}

void ltlsnfParser::SnfClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSnfClause(this);
}

void ltlsnfParser::SnfClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSnfClause(this);
}

ltlsnfParser::SnfClauseContext* ltlsnfParser::snfClause() {
  SnfClauseContext *_localctx = _tracker.createInstance<SnfClauseContext>(_ctx, getState());
  enterRule(_localctx, 6, ltlsnfParser::RuleSnfClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(46);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ltlsnfParser::ALWAYS: {
        enterOuterAlt(_localctx, 1);
        setState(44);
        alwaysClause();
        break;
      }

      case ltlsnfParser::OR: {
        enterOuterAlt(_localctx, 2);
        setState(45);
        propositionalClause();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AlwaysClauseContext ------------------------------------------------------------------

ltlsnfParser::AlwaysClauseContext::AlwaysClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::AlwaysClauseContext::ALWAYS() {
  return getToken(ltlsnfParser::ALWAYS, 0);
}

tree::TerminalNode* ltlsnfParser::AlwaysClauseContext::LPAREN() {
  return getToken(ltlsnfParser::LPAREN, 0);
}

ltlsnfParser::TemporalClauseContext* ltlsnfParser::AlwaysClauseContext::temporalClause() {
  return getRuleContext<ltlsnfParser::TemporalClauseContext>(0);
}

tree::TerminalNode* ltlsnfParser::AlwaysClauseContext::RPAREN() {
  return getToken(ltlsnfParser::RPAREN, 0);
}


size_t ltlsnfParser::AlwaysClauseContext::getRuleIndex() const {
  return ltlsnfParser::RuleAlwaysClause;
}

void ltlsnfParser::AlwaysClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAlwaysClause(this);
}

void ltlsnfParser::AlwaysClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAlwaysClause(this);
}

ltlsnfParser::AlwaysClauseContext* ltlsnfParser::alwaysClause() {
  AlwaysClauseContext *_localctx = _tracker.createInstance<AlwaysClauseContext>(_ctx, getState());
  enterRule(_localctx, 8, ltlsnfParser::RuleAlwaysClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(ltlsnfParser::ALWAYS);
    setState(49);
    match(ltlsnfParser::LPAREN);
    setState(50);
    temporalClause();
    setState(51);
    match(ltlsnfParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TemporalClauseContext ------------------------------------------------------------------

ltlsnfParser::TemporalClauseContext::TemporalClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ltlsnfParser::PropositionalClauseContext* ltlsnfParser::TemporalClauseContext::propositionalClause() {
  return getRuleContext<ltlsnfParser::PropositionalClauseContext>(0);
}

ltlsnfParser::StepClauseContext* ltlsnfParser::TemporalClauseContext::stepClause() {
  return getRuleContext<ltlsnfParser::StepClauseContext>(0);
}

ltlsnfParser::SometimeClauseContext* ltlsnfParser::TemporalClauseContext::sometimeClause() {
  return getRuleContext<ltlsnfParser::SometimeClauseContext>(0);
}


size_t ltlsnfParser::TemporalClauseContext::getRuleIndex() const {
  return ltlsnfParser::RuleTemporalClause;
}

void ltlsnfParser::TemporalClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTemporalClause(this);
}

void ltlsnfParser::TemporalClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTemporalClause(this);
}

ltlsnfParser::TemporalClauseContext* ltlsnfParser::temporalClause() {
  TemporalClauseContext *_localctx = _tracker.createInstance<TemporalClauseContext>(_ctx, getState());
  enterRule(_localctx, 10, ltlsnfParser::RuleTemporalClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(53);
      propositionalClause();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(54);
      stepClause();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(55);
      sometimeClause();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropositionalClauseContext ------------------------------------------------------------------

ltlsnfParser::PropositionalClauseContext::PropositionalClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::PropositionalClauseContext::OR() {
  return getToken(ltlsnfParser::OR, 0);
}

tree::TerminalNode* ltlsnfParser::PropositionalClauseContext::LPAREN() {
  return getToken(ltlsnfParser::LPAREN, 0);
}

tree::TerminalNode* ltlsnfParser::PropositionalClauseContext::LBRACK() {
  return getToken(ltlsnfParser::LBRACK, 0);
}

ltlsnfParser::LiteralListContext* ltlsnfParser::PropositionalClauseContext::literalList() {
  return getRuleContext<ltlsnfParser::LiteralListContext>(0);
}

tree::TerminalNode* ltlsnfParser::PropositionalClauseContext::RBRACK() {
  return getToken(ltlsnfParser::RBRACK, 0);
}

tree::TerminalNode* ltlsnfParser::PropositionalClauseContext::RPAREN() {
  return getToken(ltlsnfParser::RPAREN, 0);
}


size_t ltlsnfParser::PropositionalClauseContext::getRuleIndex() const {
  return ltlsnfParser::RulePropositionalClause;
}

void ltlsnfParser::PropositionalClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropositionalClause(this);
}

void ltlsnfParser::PropositionalClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropositionalClause(this);
}

ltlsnfParser::PropositionalClauseContext* ltlsnfParser::propositionalClause() {
  PropositionalClauseContext *_localctx = _tracker.createInstance<PropositionalClauseContext>(_ctx, getState());
  enterRule(_localctx, 12, ltlsnfParser::RulePropositionalClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(ltlsnfParser::OR);
    setState(59);
    match(ltlsnfParser::LPAREN);
    setState(60);
    match(ltlsnfParser::LBRACK);
    setState(61);
    literalList();
    setState(62);
    match(ltlsnfParser::RBRACK);
    setState(63);
    match(ltlsnfParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StepClauseContext ------------------------------------------------------------------

ltlsnfParser::StepClauseContext::StepClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::OR() {
  return getToken(ltlsnfParser::OR, 0);
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::LPAREN() {
  return getToken(ltlsnfParser::LPAREN, 0);
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::LBRACK() {
  return getToken(ltlsnfParser::LBRACK, 0);
}

ltlsnfParser::LiteralListContext* ltlsnfParser::StepClauseContext::literalList() {
  return getRuleContext<ltlsnfParser::LiteralListContext>(0);
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::COMMA() {
  return getToken(ltlsnfParser::COMMA, 0);
}

ltlsnfParser::NextLiteralListContext* ltlsnfParser::StepClauseContext::nextLiteralList() {
  return getRuleContext<ltlsnfParser::NextLiteralListContext>(0);
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::RBRACK() {
  return getToken(ltlsnfParser::RBRACK, 0);
}

tree::TerminalNode* ltlsnfParser::StepClauseContext::RPAREN() {
  return getToken(ltlsnfParser::RPAREN, 0);
}


size_t ltlsnfParser::StepClauseContext::getRuleIndex() const {
  return ltlsnfParser::RuleStepClause;
}

void ltlsnfParser::StepClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStepClause(this);
}

void ltlsnfParser::StepClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStepClause(this);
}

ltlsnfParser::StepClauseContext* ltlsnfParser::stepClause() {
  StepClauseContext *_localctx = _tracker.createInstance<StepClauseContext>(_ctx, getState());
  enterRule(_localctx, 14, ltlsnfParser::RuleStepClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(ltlsnfParser::OR);
    setState(66);
    match(ltlsnfParser::LPAREN);
    setState(67);
    match(ltlsnfParser::LBRACK);
    setState(68);
    literalList();
    setState(69);
    match(ltlsnfParser::COMMA);
    setState(70);
    nextLiteralList();
    setState(71);
    match(ltlsnfParser::RBRACK);
    setState(72);
    match(ltlsnfParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SometimeClauseContext ------------------------------------------------------------------

ltlsnfParser::SometimeClauseContext::SometimeClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::OR() {
  return getToken(ltlsnfParser::OR, 0);
}

std::vector<tree::TerminalNode *> ltlsnfParser::SometimeClauseContext::LPAREN() {
  return getTokens(ltlsnfParser::LPAREN);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::LPAREN(size_t i) {
  return getToken(ltlsnfParser::LPAREN, i);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::LBRACK() {
  return getToken(ltlsnfParser::LBRACK, 0);
}

ltlsnfParser::LiteralListContext* ltlsnfParser::SometimeClauseContext::literalList() {
  return getRuleContext<ltlsnfParser::LiteralListContext>(0);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::COMMA() {
  return getToken(ltlsnfParser::COMMA, 0);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::SOMETIME() {
  return getToken(ltlsnfParser::SOMETIME, 0);
}

ltlsnfParser::LiteralContext* ltlsnfParser::SometimeClauseContext::literal() {
  return getRuleContext<ltlsnfParser::LiteralContext>(0);
}

std::vector<tree::TerminalNode *> ltlsnfParser::SometimeClauseContext::RPAREN() {
  return getTokens(ltlsnfParser::RPAREN);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::RPAREN(size_t i) {
  return getToken(ltlsnfParser::RPAREN, i);
}

tree::TerminalNode* ltlsnfParser::SometimeClauseContext::RBRACK() {
  return getToken(ltlsnfParser::RBRACK, 0);
}


size_t ltlsnfParser::SometimeClauseContext::getRuleIndex() const {
  return ltlsnfParser::RuleSometimeClause;
}

void ltlsnfParser::SometimeClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSometimeClause(this);
}

void ltlsnfParser::SometimeClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSometimeClause(this);
}

ltlsnfParser::SometimeClauseContext* ltlsnfParser::sometimeClause() {
  SometimeClauseContext *_localctx = _tracker.createInstance<SometimeClauseContext>(_ctx, getState());
  enterRule(_localctx, 16, ltlsnfParser::RuleSometimeClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(ltlsnfParser::OR);
    setState(75);
    match(ltlsnfParser::LPAREN);
    setState(76);
    match(ltlsnfParser::LBRACK);
    setState(77);
    literalList();
    setState(78);
    match(ltlsnfParser::COMMA);
    setState(79);
    match(ltlsnfParser::SOMETIME);
    setState(80);
    match(ltlsnfParser::LPAREN);
    setState(81);
    literal();
    setState(82);
    match(ltlsnfParser::RPAREN);
    setState(83);
    match(ltlsnfParser::RBRACK);
    setState(84);
    match(ltlsnfParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralListContext ------------------------------------------------------------------

ltlsnfParser::LiteralListContext::LiteralListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ltlsnfParser::LiteralContext *> ltlsnfParser::LiteralListContext::literal() {
  return getRuleContexts<ltlsnfParser::LiteralContext>();
}

ltlsnfParser::LiteralContext* ltlsnfParser::LiteralListContext::literal(size_t i) {
  return getRuleContext<ltlsnfParser::LiteralContext>(i);
}

std::vector<tree::TerminalNode *> ltlsnfParser::LiteralListContext::COMMA() {
  return getTokens(ltlsnfParser::COMMA);
}

tree::TerminalNode* ltlsnfParser::LiteralListContext::COMMA(size_t i) {
  return getToken(ltlsnfParser::COMMA, i);
}


size_t ltlsnfParser::LiteralListContext::getRuleIndex() const {
  return ltlsnfParser::RuleLiteralList;
}

void ltlsnfParser::LiteralListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteralList(this);
}

void ltlsnfParser::LiteralListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ltlsnfListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteralList(this);
}

ltlsnfParser::LiteralListContext* ltlsnfParser::literalList() {
  LiteralListContext *_localctx = _tracker.createInstance<LiteralListContext>(_ctx, getState());
  enterRule(_localctx, 18, ltlsnfParser::RuleLiteralList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(86);
    literal();
    setState(91);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(87);
        match(ltlsnfParser::COMMA);
        setState(88);
        literal(); 
      }
      setState(93);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NextLiteralListContext ------------------------------------------------------------------

ltlsnfParser::NextLiteralListContext::NextLiteralListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ltlsnfParser::NextLiteralListContext::NEXT() {
  return getTokens(ltlsnfParser::NEXT);
}

tree::TerminalNode* ltlsnfParser::NextLiteralListContext::NEXT(size_t i) {
  return getToken(ltlsnfParser::NEXT, i);
}

std::vector<tree::TerminalNode *> ltlsnfParser::NextLiteralListContext::LPAREN() {
  return getTokens(ltlsnfParser::LPAREN);
}

tree::TerminalNode* ltlsnfParser::NextLiteralListContext::LPAREN(size_t i) {
  return getToken(ltlsnfParser::LPAREN, i);
}

std::vector<ltlsnfParser::LiteralContext *> ltlsnfParser::NextLiteralListContext::literal() {
  return getRuleContexts<ltlsnfParser::LiteralContext>();
}

ltlsnfParser::LiteralContext* ltlsnfParser::NextLiteralListContext::literal(size_t i) {
  return getRuleContext<ltlsnfParser::LiteralContext>(i);
}
